--- a/disa.html
+++ b/disa.html
@@ -1,1 +1,7 @@
-guhgvhg
+<!DOCTYPE html>
+<html lang="pl-PL'>
+  <head>
+    <title>nowayingpro<?title>
+  </head>
+  <body>
+  <h1>Kocham sora mohameda salaha>
