--- a/disa.html
+++ b/disa.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="pl-PL'>
+<html lang="pl">
   <head>
-    <title>nowayingpro<?title>
+    <title>nowayingpro</title>
   </head>
   <body>
-  <h1>Kocham sora mohameda salaha>
+  <h1>Kocham sora mohameda salaha</h1>
+  </body>
+</html>
