--- a/disa.html
+++ b/disa.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
+     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Language" content="pl">
+    <meta name="Reply-to" content="karpevychtolik@gmail.com">
+    <title>Apple Room - Twój sklep z produktami Apple</title>
+    <meta name="page-topic" content="Sklep Apple Room">
+    <meta name="Creation_Date" content="2023-09-12">
+    <meta name="Keywords" content="produkty Apple, iPhone, iPad, Mac, akcesoria Apple">
+    <meta name="Description" content="Apple Room - Twój sklep z produktami Apple. Oferujemy szeroki wybór produktów Apple oraz akcesoriów.">
+    <meta name="Robots" content="index, follow">
     <title>nowayingpro</title>
   </head>
   <body>
