--- a/disa.html
+++ b/disa.html
@@ -42,9 +42,9 @@
 </head>
 <body>
     <header>
-        <img src="rogalclick.png" alt="Logo Firmy" style="width: 0px; height: 0px;">
+        <img src="pies.jfif" alt="Piesek" style="width: 0px; height: 0px;">
         <h1>Moje Logo</h1>
-        <img src="rogalclick.png" alt="Zdjęcie" style="width: 300px; height: 200px;">
+        <img src="pies.jfif" alt="Psiuncio" style="width: 300px; height: 200px;">
         <p>Siema</p>
     </header>
     <nav>
