--- a/disa.html
+++ b/disa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moja Strona</title>
+    <title>Fajna siec</title>
     <style>
         /* Dodaj stylizację według potrzeb */
         body {
@@ -43,23 +43,23 @@
 <body>
     <header>
         <img src="pies.jfif" alt="Piesek" style="width: 0px; height: 0px;">
-        <h1>Moje Logo</h1>
+        <h1>muj pies</h1>
         <img src="pies.jfif" alt="Psiuncio" style="width: 300px; height: 200px;">
-        <p>Siema</p>
+        <p>Rogal huj</p>
     </header>
     <nav>
-        <a href="#">Strona Rogala</a>
-        <a href="https://pis.org.pl/">O Nas</a>
-        <a href="https://www.oferteo.pl/zlodziejskie-uslugi-lesne-zul/firma/749181">Usługi</a>
+        <a href="#">Strona pawela</a>
+        <a href="https://www.tapetus.pl/116414,wodospad-niagara.php">wodsospady</a>
+        <a href="https://pl.pinterest.com/pin/757871443515795466/">Zdjecia pieskow</a>
         <a href="https://www.prezydent.pl/kontakt">Kontakt</a>
     </nav>
     <section>
         <h2>Strona Główna</h2>
-		<img src="clicklik.png" alt="zaklady" style="width: 1300px; height: 1300px;">
-        <p>Tutaj znajdziesz informacje o naszej firmie.</p>
+		<img src="wodospad.jfif" alt="wodspady" style="width: 1300px; height: 1300px;">
+        <p>Jechac disa kurcze zwsia syna diabla skurczybyka</p>
     </section>
     <footer>
-        <p>&copy; 2023 Rogal Click</p>
+        <p>&copy; 2050 Lepsza Polska</p>
         <p>Data: <span id="currentDate"></span></p>
         <script>
             // JavaScript, który automatycznie ustawia aktualną datę
