--- a/disa.html
+++ b/disa.html
@@ -55,8 +55,9 @@
     </nav>
     <section>
         <h2>Strona Główna</h2>
+	 <p>Jechac disa kurcze zwsia syna diabla skurczybyka</p>
 		<img src="wodospad.jfif" alt="wodspady" style="width: 1300px; height: 1300px;">
-        <p>Jechac disa kurcze zwsia syna diabla skurczybyka</p>
+        <p>Julia boża to zakonnica</p>
     </section>
     <footer>
         <p>&copy; 2050 Lepsza Polska</p>
