--- a/disa.html
+++ b/disa.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         header {
-            background-color: #FF5550;
+            background-color: #000000;
             color: red;
             text-align: center;
             padding: 20px;
