--- a/disa.html
+++ b/disa.html
@@ -45,7 +45,7 @@
         <img src="pies.jfif" alt="Piesek" style="width: 0px; height: 0px;">
         <h1>muj pies</h1>
         <img src="pies.jfif" alt="Psiuncio" style="width: 300px; height: 200px;">
-        <p>Rogal huj</p>
+        <p>Rogal luj</p>
     </header>
     <nav>
         <a href="#">Strona pawela</a>
