--- a/disa.html
+++ b/disa.html
@@ -4,74 +4,194 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fajna siec</title>
+    <title>Jestem krolem</title>
     <style>
-        /* Dodaj stylizację według potrzeb */
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
         }
         header {
-            background-color: #000000;
-            color: red;
+            background-color: #635858;
+            color: #fff;
+            padding: 10px;
             text-align: center;
-            padding: 20px;
         }
         nav {
             background-color: #444;
-            color: white;
             text-align: center;
             padding: 10px;
         }
         nav a {
+            color: #fff;
             text-decoration: none;
-            color: white;
             margin: 10px;
         }
         section {
             padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
         }
         footer {
-            background-color: #333;
-            color: white;
+            background-color: #444;
+            color: #fff;
             text-align: center;
             padding: 10px;
+        }
+        table {
+            width: 80%;
+            margin: 0 auto;
+            border-collapse: collapse;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        th, td {
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #3498db;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) {
+            background-color: #e5e5e5;
+        }
+        td:first-child {
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+        }
+        td:last-child {
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+        .header2 {
+            text-align: center;
+            font-size: 40px;
+        }
+        .header3 {
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="pies.jfif" alt="Piesek" style="width: 0px; height: 0px;">
-        <h1>muj pies</h1>
-        <img src="pies.jfif" alt="Psiuncio" style="width: 300px; height: 200px;">
-        <p>Rogal luj</p>
+        <img src="elo.jpg" alt="elo.jpg" width="600" height="auto">
+        <h1>Pablito Mojito</h1>
     </header>
-    <nav>
-        <a href="#">Strona pawela</a>
-        <a href="https://www.tapetus.pl/116414,wodospad-niagara.php">wodsospady</a>
-        <a href="https://pl.pinterest.com/pin/757871443515795466/">Zdjecia pieskow</a>
-        <a href="https://www.prezydent.pl/kontakt">Kontakt</a>
-    </nav>
     <section>
-        <h2>Strona Główna</h2>
-	 <p>Jechac disa kurcze zwsia syna diabla skurczybyka</p>
-		<img src="wodospad.jfif" alt="wodspady" style="width: 1300px; height: 1300px;">
-        <p>Julia boża to zakonnica</p>
+        <div class="header3">
+        <h2 class="header2">Strona o prawo jazdy</h2>
+        <p>FAjne znaki</p>
+        <h2>Lista znakow do zdania prawka</h2>
+        </div>
+        <table border="1">
+            <thead>
+                <tr>
+                    <!DOCTYPE html>
+<html>
+<head>
+    <style>
+        table {
+            font-family: Arial, sans-serif;
+            border-collapse: collapse;
+            width: 50%;
+        }
+        th, td {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    </style>
+</head>
+<body>
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        table {
+            font-family: Arial, sans-serif;
+            border-collapse: collapse;
+            width: 50%;
+        }
+        th, td {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    </style>
+<table>
+    <thead>
+        <tr>
+            <th>Rodzaj znaku</th>
+            <th>OPIS ZNAK</th>
+            <th>HAHA</th>
+            <th>Ocena 0/10</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Znaki ostrzegawcze</td>
+            <td>Znak ktury ostrzega</td>
+            <td>XDD</td>
+            <td>100/10</td>
+        </tr>
+        <tr>
+            <td>znaki nakazu</td>
+            <td>ZNak ktury nakazuje</td>
+            <td>nie smieszne, gdy ktos kaze ci cos robic czego nie chcesz</td>
+            <td>2/10</td>
+        </tr>
+	    <td>ZNAKI INFORMACYJNE</td>
+            <td>ZNak ktury informuje, ale nie jest to potrzebne </td>
+            <td>znak bez sensu, i tak informacje mam w glowie</td>
+            <td>3/10</td>
+        </tr>
+	<td>znaki uzupełniające</td>
+            <td>ZNak ktury uzupelnia</td>
+            <td>znak dosyc bezwartosciowy</td>
+            <td>2/10</td>
+        </tr>
+        <tr>
+            <td rowspan="2">ZNAKI POZIOME</td>
+            <td>Do tych znakow ciezko sie przycepic</td>
+            <td>smieszne</td>
+            <td>6/10</td>
+        </tr>
+        <tr>
+            <td>Znaki dodatkowe</td>
+            <td>glupie sa</td>
+            <td>0/10</td>
+        </tr>
+    </tbody>
+</table>
+</head>
+</html>
     </section>
     <footer>
-        <p>&copy; 2050 Lepsza Polska</p>
+        <p>© prawko fajne jest nawet </p>
         <p>Data: <span id="currentDate"></span></p>
-        <script>
-            // JavaScript, który automatycznie ustawia aktualną datę
-            const currentDateElement = document.getElementById('currentDate');
-            const currentDate = new Date();
-            const year = currentDate.getFullYear();
-            const month = (currentDate.getMonth() + 1).toString().padStart(2, '0');
-            const day = currentDate.getDate().toString().padStart(2, '0');
-            currentDateElement.textContent = `${day}.${month}.${year}`;
-        </script>
     </footer>
+    <script>
+
+function aktualizujDate() {
+			const currentDateElement = document.getElementById("currentDate");
+			const aktualnaData = new Date();
+			currentDateElement.textContent = aktualnaData.toLocaleDateString() + " " + aktualnaData.toLocaleTimeString();
+		}
+
+		// Wywołanie funkcji aktualizującej datę na początku
+		aktualizujDate();
+
+		// Ustawienie interwału, aby odświeżać datę co sekundę
+		setInterval(aktualizujDate, 1000);
+	
+</script>
 </body>
 </html>
-
