--- a/disa.html
+++ b/disa.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <header>
-        <img src="elo.jpg" alt="elo.jpg" width="600" height="auto">
+        <img src="znaj.jpg" alt="znaj.jpg" width="600" height="auto">
         <h1>Pablito Mojito</h1>
     </header>
     <section>
