--- a/disa.html
+++ b/disa.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
         }
         header {
-            background-color: #635858;
+            background-color: #800000;
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -48,7 +48,7 @@
             text-align: center;
         }
         th {
-            background-color: #3498db;
+            background-color: #C0C0C0;
             color: white;
         }
         tr:nth-child(even) {
