--- a/disa.html
+++ b/disa.html
@@ -122,7 +122,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="X D" width="200" height="auto">
+        <img src="guwno.png" alt="X D" width="200" height="auto">
         <h1>007 #gra sz?</h1>
     </header>
     <section>
@@ -136,15 +136,15 @@
                     <th>Gatunek</th>
                     <th>Tytuł filmu</th>
                     <th>Rok produkcji</th>
-                    <th>Ocena (w skali od 1 do 10)</th>
+                    <th>Ocena</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td rowspan="3">Dramat, Komedia</td>
-                    <td>Forrest Gump</td>
-                    <td>1994</td>
-                    <td>9</td>
+                    <td rowspan="3">Komedia</td>
+                    <td>MAM TALENT W DOMU X!</td>
+                    <td>12 kwi 2020</td>
+                    <td>10</td>
                 </tr>
             </tbody>
         </table>
@@ -152,16 +152,16 @@
     
     <section id="video-container">
         <div class="video">
-            <iframe width="560" height="315" src="https://youtu.be/yekPaShqYtc" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=V997VX3NIBo&t=1659s&ab_channel=Konopskyy" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video">
-            <iframe width="560" height="315" src="https://youtu.be/V997VX3NIBo" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=yekPaShqYtc&ab_channel=dejvidtibijskizadymiarz" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
     
     <!-- Kontener z audio wyśrodkowany na środku strony -->
     <div class="center-container">
-        <h2>Ulubiona piosenka</h2>
+        <h2>nutka ziomka ocen pls</h2>
         <audio controls autoplay>
             <source src="MGNG - COCO errape.mp3" type="audio/mp3">
             Twoja przeglądarka nie obsługuje odtwarzacza audio.
@@ -169,11 +169,11 @@
     </div>
 
     <div id="image-container">
-        <img src="facebook.png" alt="Obrazek" width="560" height="315">
+        <img src="stju.png" alt="idol z malenkosci" width="560" height="315">
     </div>
   
     <footer>
-        <p>© 2023 Anatolii Karpevych</p>
+        <p>o mamamia</p>
         <p>Data: <span id="currentDate"></span></p>
     </footer> 
     <script>
