--- a/disa.html
+++ b/disa.html
@@ -152,10 +152,10 @@
     
     <section id="video-container">
         <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=V997VX3NIBo&t=1659s&ab_channel=Konopskyy" frameborder="0" allowfullscreen></iframe>
+           <iframe width="1280" height="720" src="https://www.youtube.com/embed/yekPaShqYtc" title="UDAJE WYBORCE PiS WŚRÓD MŁODZIEŻY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=yekPaShqYtc&ab_channel=dejvidtibijskizadymiarz" frameborder="0" allowfullscreen></iframe>
+            <iframe width="1280" height="720" src="https://www.youtube.com/embed/V997VX3NIBo" title="MROCZNA PRZESZŁOŚĆ POLSKIEGO YOUTUBA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
     
