--- a/disa.html
+++ b/disa.html
@@ -56,16 +56,16 @@
         }
 
         th {
-            background-color: #3498db;
+            background-color: #fa9dcf;
             color: white;
         }
 
         tr:nth-child(even) {
-            background-color: #f2f2f2;
+            background-color: #fa9dcf;
         }
 
         tr:nth-child(odd) {
-            background-color: #e5e5e5;
+            background-color: #fa9dcf;
         }
 
         td:first-child {
