--- a/disa.html
+++ b/disa.html
@@ -137,7 +137,10 @@
            <iframe width="1280" height="720" src="https://www.youtube.com/embed/yekPaShqYtc" title="UDAJE WYBORCE PiS WŚRÓD MŁODZIEŻY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div class="video">
-            <iframe width="1280" height="720" src="https://www.youtube.com/embed/V997VX3NIBo" title="MROCZNA PRZESZŁOŚĆ POLSKIEGO YOUTUBA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="1280" height="720" src="https://www.youtube.com/embed/JZBKm2BVUL4" title="Alicja Węgorzewska Hymn Inki" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+           <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2F100038756511179%2Fvideos%2F1039629600784403%2F&show_text=false&width=267&t=0" width="430" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
         </div>
     </section>
     
