--- a/disa.html
+++ b/disa.html
@@ -143,6 +143,19 @@
            <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2F100038756511179%2Fvideos%2F1039629600784403%2F&show_text=false&width=267&t=0" width="430" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
         </div>
     </section>
+    <hr>
+
+    <div class="photo">
+        <img src="TORT.jpg" alt="torcik" width="1200" height="800" usemap="#swieczki">
+    </div>
+
+    <map id="swieczki">
+        <area shape="rect" coords="198,60,375,167" href="https://d-art.ppstatic.pl/kadry/k/r/1/1c/a5/63cfb77928d02_o_large.jpg" target="_blank" alt="Pisowska Świeczka 1">
+        <area shape="circle" coords="182,381,98" href="https://d-art.ppstatic.pl/kadry/k/r/1/3d/f2/63cfb76ede58f_o_large.jpg" target="_blank" alt="Pisowska Świeczka 2">
+        <area shape="poly" coords="910,390,1024,485,1059,377,967,311,875,379" href="https://d-art.ppstatic.pl/kadry/k/r/1/17/8f/63cfb77fc0381_o_large.jpg" target="_blank" alt="Pisowska Świeczka 3">
+        <area shape="rect" coords="737,56,1002,202" href="https://d-art.ppstatic.pl/kadry/k/r/1/8a/b9/63cfb783ab34b_o_large.jpg" target="_blank" alt="Pisowska Świeczka 4">
+    </map>
+    <hr>
     
     <!-- Kontener z audio wyśrodkowany na środku strony -->
     <div class="center-container">
