--- a/disa.html
+++ b/disa.html
@@ -146,7 +146,7 @@
     <hr>
 
     <div class="photo">
-        <img src="TORT.jpg" alt="torcik" width="1200" height="800" usemap="#swieczki">
+        <img src="tort.jpg" alt="torcik" width="1200" height="800" usemap="#swieczki">
     </div>
 
     <map id="swieczki">
