--- a/disa.html
+++ b/disa.html
@@ -146,7 +146,7 @@
                 <p>Wśród nocnej ciszy głos się rozchodzi: wstańcie, pasterze – Bóg się wam rodzi! Czem prędzej się wybierajcie, 
                     do Betlejem pośpieszajcie przywitać Pana, przywitać Pana.</p>
                 <audio controls>
-                    <source src="kolęda1.mp3" type="audio/mpeg">
+                    <source src="kolęda1.mp3" type="wsrod.mp3">
                 </audio>
             </li>
             <li>
@@ -154,14 +154,14 @@
                 <p>W żłobie leży,
                     któż pobieży kolędować małemuJezusowi Chrystusowi, dziś nam narodzonemu?</p>
                 <audio controls>
-                    <source src="kolęda2.mp3" type="audio/mpeg">
+                    <source src="kolęda2.mp3" type="aniolki.mp3">
                 </audio>
             </li>
             <li>
                 <h3>Kolęda 3</h3>
                 <p>Przybieżeli do Betlejem pasterze, grając skocznie Dzieciąteczku na lirze.</p>
                 <audio controls>
-                    <source src="kolęda3.mp3" type="audio/mpeg">
+                    <source src="kolęda3.mp3" type="przybiezeli.mp3">
                 </audio>
             </li>
         </ul>
